<resources>
    <string name="app_name">Virtuali</string>
    <string name="tv_title">Welcome to CineBok</string>
    <string name="tv_username">User Name</string>
    <string name="tv_password">Password</string>
    <string name="et_username" />
    <string name="et_password" />
    <string name="tv_gotoRegister">Click here to go Register Page</string>
    <string name="movie_image">Movie Image</string>
    <string name="upload_img">UPLOAD</string>
    <string name="register_title">User registration page</string>
    <string name="usernameR">User Name</string>
    <string name="emailR">Email</string>
    <string name="passwordR">Password</string>
    <string name="reenterR">Re_Enter Password</string>
    <string name="mobileR">Mobile Number</string>
    <string name="tv_gotoLogin">If you have a account?Click here</string>
    <string name="et_usernameR" />
    <string name="et_email" />
    <string name="CineBok">CineBok</string>
    <string name="dm_displayMovie" />
    <string name="tv_gotoMovie">....</string>
    <string name="tkt_price">Price per ticket</string>
    <string name="movieName">AVATAR 2</string>
    <string name="price_per_ticket">500.00</string>
    <string name="btn_reserve">Reserve Tickets</string>
    <string name="No_Of_Tickets">No: of Tickets</string>
    <string name="et_numberOfTickets">2</string>
    <string name="et_pricePerTicket" />
    <string name="pricePerTicket">0.00</string>
    <string name="No_OF_Ticket">1</string>
    <string name="et_PricePerTicket">0.00</string>
    <string name="tv_total">TOTAL:</string>
    <string name="et_total">0.00</string>
    <string name="btn_confirm">Confirm</string>
    <string name="btn_login">login</string>
    <string name="btn_signin">Sign In</string>
</resources>