<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_500"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_title_r"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="172dp"
        android:layout_marginEnd="16dp"
        android:text="@string/tv_title"
        android:textColor="@color/white"
        android:textDirection="firstStrong"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.359"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_username_r"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/tv_username"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/et_username_r"
        app:layout_constraintEnd_toStartOf="@+id/et_username_r"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_username_r"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="16dp"
        android:background="@color/white"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/et_username"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_username_r"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_r" />

    <TextView
        android:id="@+id/tv_password_r"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/tv_password"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/et_password_r"
        app:layout_constraintEnd_toStartOf="@+id/et_password_r"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_gotoRegister_r"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="124dp"
        android:onClick="gotoRegister"
        android:text="@string/tv_gotoRegister"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_password_r"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="20dp"
        android:background="@color/white"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_password_r"
        app:layout_constraintTop_toBottomOf="@+id/et_username_r" />

    <TextView
        android:id="@+id/tv_gotoMovie_r"
        android:layout_width="66dp"
        android:layout_height="38dp"
        android:layout_marginBottom="16dp"
        android:onClick="gotoMoviePage"
        android:text="@string/tv_gotoMovie"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.002"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_gotocrud_movie_r"
        android:layout_width="9dp"
        android:layout_height="17dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="28dp"
        android:onClick="gotocrudMovie"
        android:text="..."
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_login_r"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_login"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:backgroundTint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/tv_gotoRegister_r"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password_r"
        app:layout_constraintVertical_bias="0.75" />
</androidx.constraintlayout.widget.ConstraintLayout>