<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Confirm_Booking">

    <TextView
        android:id="@+id/tv_total_r"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:text="@string/tv_total"
        app:layout_constraintBaseline_toBaselineOf="@+id/et_total"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="76dp"
        android:ems="10"
        android:hint="@string/et_total"
        android:inputType="textPersonName"
        android:textColorHint="@android:color/tertiary_text_light"
        app:layout_constraintStart_toEndOf="@+id/tv_total_r"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/design_default_color_on_secondary"
        android:text="@string/btn_confirm"
        app:backgroundTint="#000080"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_total"
        app:layout_constraintVertical_bias="0.914" />
</androidx.constraintlayout.widget.ConstraintLayout>